# system_clock

./: .gitignore  .metadata  CHANGELOG.md  README.md  _codeql_detected_source_root  ffigen-win.yaml  ffigen.yaml  publish.ps1  publish.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/dynamic_lib/: .gitignore  build.gradle  settings.gradle
android/src/main/cpp/: CMakeLists.txt  system_clock.cpp
android/src/main/cpp/include/system_clock/: system_clock.h
cpp/: system_clock.cpp
cpp/include/: system_clock.h
example/: .metadata  README.md  pubspec.yaml
example/android/: settings.gradle
example/integration_test/: app_test.dart
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: system_clock.podspec
ios/Classes/: SystemClockPlugin.h  SystemClockPlugin.m  system_clock.cpp
lib/: system_clock.dart
lib/src/: c_time_bindings_generated.dart  clock.dart  clock_io.dart  win_bindings.dart  win_system_clock_time_bindings_generated.dart
linux/: CMakeLists.txt  system_clock_plugin.cc
linux/include/: system_clock.h
macos/: system_clock.podspec
macos/Classes/: SystemClockPlugin.swift  system_clock.cpp
test/: system_clock_test.dart
tools/: publish.dart  pubspec.yaml
windows/: CMakeLists.txt  system_clock.cpp  system_clock_plugin.cpp
windows/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
windows/src/: CMakeLists.txt  system_clock.c  system_clock.h
(+28 files in other folders)
